src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-column-width {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]

post-map configures:
size: 1256 × 696, bounds: 800 × 600, states: []
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
